<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/nom"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/etCognom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/cognom"
        android:layout_marginLeft="125dp"/>
    <EditText
        android:id="@+id/etTelf"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/telf"
        android:layout_marginLeft="125dp"/>
    <EditText
        android:id="@+id/etWeb"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/web"
        android:layout_marginLeft="125dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmostrar"
        android:onClick="mostrar"
        android:layout_marginLeft="125dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/besborrar"
        android:onClick="borrar"
        android:layout_marginLeft="125dp"/>

</LinearLayout>